--- a/app/src/main/res/menu/menu_edititem.xml
+++ b/app/src/main/res/menu/menu_edititem.xml
@@ -3,6 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.mborzenkov.readlaterlist.activity.EditItemActivity">
     <item
+        android:id="@+id/edititem_action_save"
+        android:orderInCategory="1"
+        android:title="@string/edititem_menu_save"
+        android:icon="@drawable/ic_check_24dp"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/edititem_action_delete"
         android:orderInCategory="100"
         android:title="@string/edititem_menu_delete"
