--- a/app/src/main/res/menu/menu_mainlist.xml
+++ b/app/src/main/res/menu/menu_mainlist.xml
@@ -4,6 +4,13 @@
     tools:context="com.example.mborzenkov.readlaterlist.activity.MainListActivity">
 
     <item
+        android:id="@+id/mainlist_action_search"
+        android:orderInCategory="1"
+        android:title="@string/mainlist_menu_search"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="collapseActionView"/>
+
+    <item
         android:id="@+id/mainlist_action_delete_all"
         android:orderInCategory="100"
         android:title="@string/mainlist_menu_delete_all"
