--- a/app/src/main/res/layout/fragment_conflict.xml
+++ b/app/src/main/res/layout/fragment_conflict.xml
@@ -21,7 +21,6 @@
             android:layout_marginStart="@dimen/marginhorizontal_small"
             android:layout_marginRight="@dimen/marginhorizontal_small"
             android:layout_marginEnd="@dimen/marginhorizontal_small"
-            android:layout_marginTop="@dimen/marginhorizontal_small"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -45,10 +44,11 @@
             style="@style/Text.Secondary"
             />
 
-        <GridLayout
-            android:id="@+id/grid_conflict_items"
+        <LinearLayout
+            android:id="@+id/linearlayout_conflict_items"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
             android:layout_marginLeft="@dimen/marginhorizontal_small"
             android:layout_marginStart="@dimen/marginhorizontal_small"
             android:layout_marginRight="@dimen/marginhorizontal_small"
@@ -57,22 +57,82 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_conflict_description"
-            android:columnCount="2"
+            android:numColumns="2"
             tools:minHeight="400dp"
             >
 
-        </GridLayout>
+            <TextView
+                android:id="@+id/tv_conflict_item_left"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:layout_marginLeft="@dimen/marginhorizontal_small"
+                android:layout_marginStart="@dimen/marginhorizontal_small"
+                android:layout_marginRight="@dimen/marginhorizontal_small"
+                android:layout_marginEnd="@dimen/marginhorizontal_small"
+                android:layout_marginTop="@dimen/marginhorizontal_small"
+                tools:text="Left value"
+                style="@style/Text.Secondary"
+                />
+
+            <TextView
+                android:id="@+id/tv_conflict_item_right"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:layout_marginLeft="@dimen/marginhorizontal_small"
+                android:layout_marginStart="@dimen/marginhorizontal_small"
+                android:layout_marginRight="@dimen/marginhorizontal_small"
+                android:layout_marginEnd="@dimen/marginhorizontal_small"
+                android:layout_marginTop="@dimen/marginhorizontal_small"
+                tools:text="Right value"
+                style="@style/Text.Secondary"
+                />
+
+
+        </LinearLayout>
+
+        <RadioGroup
+            android:id="@+id/rg_conflict_chosen"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/marginhorizontal_small"
+            android:layout_marginStart="@dimen/marginhorizontal_small"
+            android:layout_marginRight="@dimen/marginhorizontal_small"
+            android:layout_marginEnd="@dimen/marginhorizontal_small"
+            android:layout_marginTop="@dimen/marginhorizontal_small"
+            android:orientation="horizontal"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearlayout_conflict_items"
+            >
+
+            <RadioButton
+                android:id="@+id/rb_conflict_item_left"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                />
+
+            <RadioButton
+                android:id="@+id/rb_conflict_item_right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                />
+
+        </RadioGroup>
 
         <Button
             android:id="@+id/button_conflict_next"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/marginhorizontal_normal"
             android:layout_marginEnd="@dimen/marginhorizontal_normal"
             android:layout_marginTop="@dimen/marginvertical_normal"
             android:layout_marginBottom="@dimen/marginvertical_normal"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/grid_conflict_items"
+            app:layout_constraintTop_toBottomOf="@+id/rg_conflict_chosen"
             app:layout_constraintBottom_toBottomOf="parent"
             tools:text="Next"
             style="@style/Button"
