--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,23 +2,36 @@
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawerlayout_mainlist"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.mborzenkov.readlaterlist.activity.main.MainActivity"
     >
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         >
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar_main_list"
-            style="@style/Toolbar"
-            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            >
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar_mainactivity"
+                style="@style/Toolbar"
+                />
+
+            <android.support.v4.widget.SwipeRefreshLayout
+                android:id="@+id/fragmentcontainer_mainactivity"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                >
+
+            </android.support.v4.widget.SwipeRefreshLayout>
+
+        </LinearLayout>
 
         <ProgressBar
             android:id="@+id/pb_mainactivity_loading"
@@ -27,15 +40,14 @@
             style="@style/ProgressBarSpinning"
             />
 
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/fragmentcontainer_mainactivity"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_item_add"
+            android:layout_gravity="bottom|end"
+            app:srcCompat="@drawable/ic_add_24dp"
+            style="@style/FAB"
+            />
 
-        </android.support.v4.widget.SwipeRefreshLayout>
-
-    </LinearLayout>
+    </FrameLayout>
 
     <include layout="@layout/drawer_mainlist"/>
 
