--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawerlayout_mainlist"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -49,6 +50,21 @@
 
     </FrameLayout>
 
-    <include layout="@layout/drawer_mainlist"/>
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="end"
+        style="@style/MainList.Drawer.Layout"
+        >
+
+        <fragment
+            android:name="com.example.mborzenkov.readlaterlist.fragments.FilterDrawerFragment"
+            android:tag="fragment_drawer_filter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:layout="@layout/fragment_drawer_filter"
+            />
+
+    </ScrollView>
 
 </android.support.v4.widget.DrawerLayout>
