--- a/app/src/main/res/layout/fragment_conflict.xml
+++ b/app/src/main/res/layout/fragment_conflict.xml
@@ -21,6 +21,7 @@
             android:layout_marginStart="@dimen/marginhorizontal_small"
             android:layout_marginRight="@dimen/marginhorizontal_small"
             android:layout_marginEnd="@dimen/marginhorizontal_small"
+            android:layout_marginTop="@dimen/marginhorizontal_small"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -94,7 +95,7 @@
 
         <RadioGroup
             android:id="@+id/rg_conflict_chosen"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/marginhorizontal_small"
             android:layout_marginStart="@dimen/marginhorizontal_small"
