--- a/app/src/main/res/layout/fragment_itemlist.xml
+++ b/app/src/main/res/layout/fragment_itemlist.xml
@@ -30,7 +30,7 @@
                 android:layout_height="match_parent"
                 >
 
-                <ListView
+                <android.support.v7.widget.RecyclerView
                     android:id="@+id/listview_itemlist"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
