--- a/app/src/main/res/layout/fragment_itemlist.xml
+++ b/app/src/main/res/layout/fragment_itemlist.xml
@@ -2,16 +2,17 @@
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawerlayout_itemlist"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    tools:ignore="InconsistentLayout"> <!-- layout land и обычный действительно немного разные -->
 
     <FrameLayout
         android:id="@+id/fragmentcontainer_mainactivity"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        tools:ignore="InconsistentLayout">
 
         <LinearLayout
             android:layout_width="match_parent"
