--- a/app/src/main/res/menu/menu_mainlist.xml
+++ b/app/src/main/res/menu/menu_mainlist.xml
@@ -12,9 +12,16 @@
         app:showAsAction="collapseActionView|ifRoom"/>
 
     <item
+        android:id="@+id/mainlist_refresh"
+        android:icon="@drawable/ic_refresh_24dp"
+        android:orderInCategory="2"
+        android:title="@string/mainlist_menu_refresh"
+        app:showAsAction="ifRoom"/>
+
+    <item
         android:id="@+id/mainlist_settings"
         android:icon="@drawable/ic_menu_24dp"
-        android:orderInCategory="2"
+        android:orderInCategory="3"
         android:title="@string/mainlist_drawer_title"
         app:showAsAction="ifRoom"/>
 
